added background image

--- a/styels/style.css
+++ b/styels/style.css
@@ -205,7 +205,7 @@ p {
 }
 /* join-section */
 .colorful-bunch-section {
-  background-image: url(/assets/news-letter-bg.png); 
+  background-image: url(../assets/news-letter-bg.png); 
   background-size: cover;
   background-position: center;
   color: white; 
